--- a/css/styles3.css
+++ b/css/styles3.css
@@ -69,10 +69,9 @@
     color: #7DF9FF;
     font-size: 10em;
     font-weight: 750;
-    /* font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif; */
     left: 45%;
     top: 40%;
-    -webkit-box-reflect: below -50px linear-gradient(transparent, rgba(0, 255, 255, 0.5));
+    -webkit-box-reflect: below -50px linear-gradient(transparent, rgba(0, 255, 255, 0.25));
 
     animation-name: shock;
     animation-duration: 2s;
@@ -131,7 +130,7 @@
         -moz-transform: scale(100%, 100%);
         -ms-transform: scale(100%, 100%);
         -o-transform: scale(100%, 100%);
-}
+    }
 }
 
 #Two h2 {
@@ -200,7 +199,7 @@
     left: 50%;
     font-size: 15em;
     font-weight: 800;
-    -webkit-box-reflect: below -25px linear-gradient(transparent, rgba(255, 0, 0, 0.50));
+    -webkit-box-reflect: below -25px linear-gradient(transparent, rgba(255, 0, 0, 0.25));
 
 
     animation-name: in;
@@ -295,7 +294,7 @@
         -o-transform: translate(0%, 150%);
 }
     100% {
-        color: lime;
+        color: green;
         transform: scale(110%, 110%);
         -webkit-transform: scale(110%, 110%);
         -moz-transform: scale(110%, 110%);
@@ -722,27 +721,27 @@
     25% {
         color: lightgray;
         text-shadow: 0 0 50px gray;
-        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(211, 211, 211, 0.5));
+        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(211, 211, 211, 0.25));
     }
     50%, 100% {
         color: white;
         text-shadow: 0 0 50px ghostwhite;
-        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(255, 255, 255, 0.5));
+        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(255, 255, 255, 0.25));
     }
     60%, 90% {
         color: yellow;
         text-shadow: 0 0 50px lightyellow;
-        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(255, 255, 224, 0.5));
+        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(255, 255, 224, 0.25));
     }
     70%, 80% {
         color: orange;
         text-shadow: 0 0 50px lightsalmon;
-        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(255, 160, 122, 0.5));
+        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(255, 160, 122, 0.25));
     }
     75% {
         color: red;
         text-shadow: 0 0 50px lightcoral;
-        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(240, 128, 128, 0.5));
+        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(240, 128, 128, 0.25));
     }
 }
 
