--- a/css/styles.css
+++ b/css/styles.css
@@ -19,7 +19,7 @@ section h1, h2, h3, h4, h5, h6, a {
 }
 
 section a {
-    font-family: 'Micro 5', serif;
+    font-family: 'Bebas Neue', serif;
 }
 
 a {
