--- a/css/speedingup.css
+++ b/css/speedingup.css
@@ -16,7 +16,7 @@ section h1, h2, h3, h4, h5, h6, a {
 }
 
 section a {
-    font-family: 'Micro 5', serif;
+    font-family: 'Bebas Neue', sans-serif;
 }
 
 a {text-decoration: none;}
@@ -53,8 +53,8 @@ footer a:hover {text-decoration: underline;}
 }
 
 #eight h2 {
-    font-size: 3em;
-    top: 22%;
+    font-size: 2.5em;
+    top: 25%;
     left: 15%;
 
     animation-name: eight;
@@ -66,9 +66,9 @@ footer a:hover {text-decoration: underline;}
 }
 
 #eight h1 {
-    font-size: 3em;
-    top: 35%;
-    left: 20%;
+    font-size: 2.5em;
+    top: 25%;
+    left: 41%;
 
     animation-name: eight;
     animation-duration: 1s;
@@ -86,14 +86,14 @@ footer a:hover {text-decoration: underline;}
     100% {
         color: black;
         text-shadow: 0 0 20px gray;
-        -webkit-box-reflect: below -10px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
+        -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
     }
 }
 
 #eight a {
     font-size: 20em;
     font-weight: 900;
-    top: 40%;
+    top: 30%;
     left: 30%;
     color: transparent;
     text-shadow: none;
@@ -111,17 +111,17 @@ footer a:hover {text-decoration: underline;}
     0% {
         color: transparent;
         text-shadow: none;
-        -webkit-box-reflect: below -150px linear-gradient(transparent, transparent);
+        -webkit-box-reflect: below -255px linear-gradient(transparent, transparent);
     }
     20% {
         color: darkgreen;
         text-shadow: 0 0 20px rgba(0, 255, 0, 0.5);
-        -webkit-box-reflect: below -150px linear-gradient(transparent, rgba(0, 255, 0, 0.25));
+        -webkit-box-reflect: below -255px linear-gradient(transparent, rgba(0, 255, 0, 0.2));
     }
     100% {
         color: green;
         text-shadow: 0 0 40px rgba(0, 128, 0, 0.5);
-        -webkit-box-reflect: below -150px linear-gradient(transparent, rgba(0, 128, 0, 0.25));
+        -webkit-box-reflect: below -255px linear-gradient(transparent, rgba(0, 128, 0, 0.2));
     }
 }
 
@@ -143,8 +143,8 @@ footer a:hover {text-decoration: underline;}
 
 #eightTwo h1 {
     font-size: 2.5em;
-    top: 25%;
-    left: 15%;
+    top: 10%;
+    left: 38.75%;
     -webkit-box-reflect: below -20px linear-gradient(transparent, rgba(0, 0, 0, 0.2));
 
     animation-name: eightPartTwo;
@@ -176,9 +176,9 @@ footer a:hover {text-decoration: underline;}
 
 #eightTwo a {
     color: transparent;
-    font-size: 20em;
+    font-size: 10em;
     font-weight: 900;
-    top: 30%;
+    top: 25%;
     left: 25%;
     -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(255, 0, 0, 0.3));
 
@@ -341,33 +341,31 @@ footer a:hover {text-decoration: underline;}
     left: 35%;
     font-size: 10em;
     font-weight: 900;
-    color: yellowgreen;
-    text-shadow: 0 0 20px green;
-    -webkit-box-reflect: below -70px linear-gradient(transparent,rgba(153, 205, 50, 0.25));
+    color: transparent;
+    text-shadow: none;
+    -webkit-box-reflect: none;
 
     animation-name: crutch;
     animation-duration: 5s;
     animation-delay: 3s;
     animation-fill-mode: forwards;
-    animation-iteration-count: infinite;
+    animation-iteration-count: 1;
     animation-direction: normal;
 }
 
 @keyframes crutch {
-    0%, 100% {
-        color: yellowgreen;
-        text-shadow: 0 0 20px green;
-        -webkit-box-reflect: below -70px linear-gradient(transparent, rgba(153, 205, 50, 0.25));
+    0% {
+        color: transparent;
+        text-shadow: none;
+        -webkit-box-reflect: none;
     }
-    62.5% {
-        color: yellow;
-        text-shadow: 0 0 20px orange;
-        -webkit-box-reflect: below -70px linear-gradient(transparent, rgba(255, 255, 0, 0.2));
+    50% {
+        color: green;
+        text-shadow: 0 0 20px darkgreen;
+        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(0, 100, 0, 0.2));
     }
-    50%, 75% {
-        color: lime;
-        text-shadow: 0 0 20px cadetblue;
-        -webkit-box-reflect: below -70px linear-gradient(transparent, rgba(0, 255, 0, 0.25));
+    100% {
+        -webkit-box-reflect: below -100px linear-gradient(transparent, rgba(0, 100, 0, 0.2));
     }
 }
 
@@ -387,8 +385,8 @@ footer a:hover {text-decoration: underline;}
 }
 
 #ten h5 {
-    top: 12.5%;
-    left: 50%;
+    top: 10.5%;
+    left: 49%;
     font-size: 1.75em;
 
     animation-name: nine;
@@ -400,7 +398,7 @@ footer a:hover {text-decoration: underline;}
 }
 
 #ten h4 {
-    top: 25%;
+    top: 20%;
     left: 20%;
     font-size: 2em;
 
@@ -432,7 +430,7 @@ footer a:hover {text-decoration: underline;}
 }
 
 #ten a {
-    top: 40%;
+    top: 30%;
     left: 40%;
     font-size: 15em;
     font-weight: 900;
@@ -457,7 +455,7 @@ footer a:hover {text-decoration: underline;}
     }
     100% {
         color: gray;
-        text-shadow: 0 0 20px ghostwhite;
+        text-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
     }
 }
 
@@ -604,8 +602,8 @@ footer a:hover {text-decoration: underline;}
 }
 
 #eleven a {
-    top: 35%;
-    left: 30%;
+    top: 40%;
+    left: 20%;
     font-size: 8em;
     font-weight: 900;
     text-align: center;
@@ -622,7 +620,7 @@ footer a:hover {text-decoration: underline;}
 /* Line Twelve */
 
 #twelve h4 {
-    top: 10%;
+    top: 5%;
     left: 10%;
     font-size: 2em;
 
@@ -635,7 +633,7 @@ footer a:hover {text-decoration: underline;}
 }
 
 #twelve h3 {
-    top: 10.5%;
+    top: 5.5%;
     left: 37%;
     font-size: 2.25em;
 
@@ -707,8 +705,8 @@ footer a:hover {text-decoration: underline;}
 }
 
 #twelve a {
-    top: 30%;
-    left: 15%;
+    top: 35%;
+    left: 10%;
     font-size: 10em;
     font-weight: 900;
     text-align: center;
@@ -726,12 +724,12 @@ footer a:hover {text-decoration: underline;}
     from {
         color: transparent;
         text-shadow: none;
-        -webkit-box-reflect: below -50px linear-gradient(transparent, transparent, transparent);
+        -webkit-box-reflect: below -100px linear-gradient(transparent, transparent, transparent);
     }
     to {
         color: green;
         text-shadow: 0 0 50px green;
-        -webkit-box-reflect: below -50px linear-gradient(transparent, transparent, rgba(0, 255, 0, 0.5));
+        -webkit-box-reflect: below -100px linear-gradient(transparent, transparent, rgba(0, 255, 0, 0.5));
     }
 }
 
