--- a/css/theEnd.css
+++ b/css/theEnd.css
@@ -35,14 +35,14 @@ footer a:hover {text-decoration: underline;}
 
 #credits {
     color: transparent;
-    font-family: 'Micro 5', sans-serif;
+    font-family: 'Bebas Neus', sans-serif;
 }
 
 #credits h6 {
     top: 2%;
     left: 29.5%;
-    font-size: 3em;
-    font-weight: 600;    
+    font-size: 2em;
+    font-weight: 650;    
 
     animation-name: appear1;
     animation-duration: 10s;
@@ -55,7 +55,7 @@ footer a:hover {text-decoration: underline;}
 #credits h5 {
     top: 8%;
     left: 30%;
-    font-size: 3em;
+    font-size: 2em;
     font-weight: 600;
 
     animation-name: appear2;
@@ -68,8 +68,8 @@ footer a:hover {text-decoration: underline;}
 
 #credits h4 {
     top: 14%;
-    left: 29%;
-    font-size: 3em;
+    left: 28%;
+    font-size: 2em;
     font-weight: 600;
 
     animation-name: appear3;
@@ -82,8 +82,8 @@ footer a:hover {text-decoration: underline;}
 
 #credits h3 {
     top: 20%;
-    left: 30%;
-    font-size: 3em;
+    left: 31%;
+    font-size: 2em;
     font-weight: 600;
     text-align: center;
 
@@ -208,9 +208,9 @@ footer a:hover {text-decoration: underline;}
 }
 
 #credits h2 {
-    top: 39%;
-    left: 30%;
-    font-size: 4em;
+    top: 35%;
+    left: 25%;
+    font-size: 3em;
     font-weight: 900;
     text-shadow: 0 0 25px transparent;
     -webkit-box-reflect: below -20px linear-gradient(transparent, transparent);    
@@ -226,7 +226,7 @@ footer a:hover {text-decoration: underline;}
 #credits h1 {
     top: 50%;
     left: 26%;
-    font-size: 3.5em;
+    font-size: 2.5em;
     font-weight: 850;
     text-align: center;
     text-shadow: 0 0 25px transparent;
